# geometry

./: .travis.yml  CMakeLists.txt  README.md
.github/workflows/: linux.yml  macos.yml  windows.yml
examples/: CMakeLists.txt  main.cpp
include/: algebra.h  algebra.hpp  algorithm.h  algorithm.hpp  bezier.h  bezier.hpp  circle.h  circle.hpp  geometry.h  geometry.hpp  line.h  line.hpp  math.h  math.hpp  point.h  point.hpp  traits.h  traits.hpp
include/detail/: detail_algebra.h  detail_algebra.hpp  detail_algorithm.h  detail_algorithm.hpp  detail_bezier.h  detail_bezier.hpp  detail_math.h  detail_math.hpp
perf/objdump/: bezier.cpp  bezier_clang_objdump  bezier_gcc_objdump  objdump.sh
src/: geometry.h
test/: CMakeLists.txt  main.cpp
